--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 5,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/вход.jpg",
+        "panorama": "./1 этаж/вход.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
