--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 5,
         "type": "equirectangular",
-        "panorama": "./1 этаж/вход.jpg",
+        "panorama": "./Полянки/1 этаж/вход.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
@@ -63,7 +63,7 @@ pannellum.viewer('panorama', {
         "hfov": 110,
         "yaw": 5,
         "type": "equirectangular",
-        "panorama": "./1 этаж/холл.jpg",
+        "panorama": "./Полянки/1 этаж/холл.jpg",
         "hotSpots": [
             {
                 "pitch": -0.1,
@@ -101,7 +101,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./1 этаж/коридор1.jpg",
+        "panorama": "./Полянки/1 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -146,7 +146,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./1 этаж/коридор2.jpg",
+        "panorama": "./Полянки/1 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -3.8,
@@ -201,7 +201,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./1 этаж/Буфет.jpg",
+        "panorama": "./Полянки/1 этаж/Буфет.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
@@ -222,7 +222,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./2 этаж/коридор1.jpg",
+        "panorama": "./Полянки/2 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -9.8,
@@ -264,7 +264,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./2 этаж/коридор2.jpg",
+        "panorama": "./Полянки/2 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -15.8,
@@ -336,7 +336,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 147,
         "type": "equirectangular",
-        "panorama": "./2 этаж/210.jpg",
+        "panorama": "./Полянки/2 этаж/210.jpg",
         "hotSpots": [
             {
                 "pitch": -4.8,
@@ -354,7 +354,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./2 этаж/205.jpg",
+        "panorama": "./Полянки/2 этаж/205.jpg",
         "hotSpots": [
             {
                 "pitch": -8.8,
@@ -372,7 +372,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./2 этаж/учебный отдел.jpg",
+        "panorama": "./Полянки/2 этаж/учебный отдел.jpg",
         "hotSpots": [
             {
                 "pitch": -14.8,
@@ -394,7 +394,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./3 этаж/коридор1.jpg",
+        "panorama": "./Полянки/3 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -18.8,
@@ -446,7 +446,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./3 этаж/библиотека 1.jpg",
+        "panorama": "./Полянки/3 этаж/библиотека 1.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -471,7 +471,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./3 этаж/библиотека 2.jpg",
+        "panorama": "./Полянки/3 этаж/библиотека 2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -489,7 +489,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./3 этаж/коридор3.jpg",
+        "panorama": "./Полянки/3 этаж/коридор3.jpg",
         "hotSpots": [
             {
                 "pitch": -13.8,
@@ -541,7 +541,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./3 этаж/коридор2.jpg",
+        "panorama": "./Полянки/3 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -566,7 +566,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./3 этаж/301.jpg",
+        "panorama": "./Полянки/3 этаж/301.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -587,7 +587,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./4 этаж/коридор.jpg",
+        "panorama": "./Полянки/4 этаж/коридор.jpg",
         "hotSpots": [
             {
                 "pitch": -13.8,
@@ -644,7 +644,7 @@ pannellum.viewer('panorama', {
         "pitch": -7,
         "yaw": 1,
         "type": "equirectangular",
-        "panorama": "./4%20%D1%8D%D1%82%D0%B0%D0%B6/419.jpg",
+        "panorama": "./Полянки/4%20%D1%8D%D1%82%D0%B0%D0%B6/419.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -662,7 +662,7 @@ pannellum.viewer('panorama', {
         "pitch": -7,
         "yaw": 1,
         "type": "equirectangular",
-        "panorama": "./4 этаж/коридор3.jpg",
+        "panorama": "./Полянки/4 этаж/коридор3.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -698,7 +698,7 @@ pannellum.viewer('panorama', {
         "pitch": -17,
         "yaw": 157,
         "type": "equirectangular",
-        "panorama": "./4 этаж/спортзал.jpg",
+        "panorama": "./Полянки/4 этаж/спортзал.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
@@ -723,7 +723,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./4 этаж/423.jpg",
+        "panorama": "./Полянки/4 этаж/423.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -741,7 +741,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./4 этаж/Актовый зал 1.jpg",
+        "panorama": "./Полянки/4 этаж/Актовый зал 1.jpg",
         "hotSpots": [
             {
                 "pitch": 1.8,
@@ -766,7 +766,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./4 этаж/Актовый зал 2.jpg",
+        "panorama": "./Полянки/4 этаж/Актовый зал 2.jpg",
         "hotSpots": [
             {
                 "pitch": 1,
@@ -791,7 +791,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./4 этаж/коридор2.jpg",
+        "panorama": "./Полянки/4 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -823,7 +823,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./4 этаж/коридор4.jpg",
+        "panorama": "./Полянки/4 этаж/коридор4.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -841,7 +841,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./4 этаж/коридор5.jpg",
+        "panorama": "./Полянки/4 этаж/коридор5.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -894,7 +894,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./4 этаж/405.jpg",
+        "panorama": "./Полянки/4 этаж/405.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
