--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ padding: 0;
 </style>
 </head>
 <body>
-
+<a href="kooperativnaya.html">a</a>
 <div id="panorama"></div>
 <script>
 pannellum.viewer('panorama', {   
