--- a/kooperativnaya.html
+++ b/kooperativnaya.html
@@ -1,3 +1,29 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+<style>
+#panorama {
+    width: auto;
+    
+}
+#panorama1 {
+    width: auto;
+    height: 600px;
+}
+.pnlm-about-msg {
+   visibility: hidden;
+    a {
+        visibility: hidden;
+      }
+  }
+div.pnlm-tooltip img {
+height: 100px;
+width: 100px;
+}
+body {
+margin: 0;
+padding: 0;
+}
+</style>
 <div id="panorama1"></div>
 <script>
 pannellum.viewer('panorama1', {   
