--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 #panorama {
     width: auto;
-    
+    height: 600px;
 }
 #panorama1 {
     width: auto;
@@ -26,6 +26,7 @@ padding: 0;
 </style>
 </head>
 <body>
+
 <div id="panorama"></div>
 <script>
 pannellum.viewer('panorama', {   
@@ -44,7 +45,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 5,
         "type": "equirectangular",
-        "panorama": "./Полянки/1 этаж/вход.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/вход.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
@@ -62,7 +63,7 @@ pannellum.viewer('panorama', {
         "hfov": 110,
         "yaw": 5,
         "type": "equirectangular",
-        "panorama": "./Полянки/1 этаж/холл.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/холл.jpg",
         "hotSpots": [
             {
                 "pitch": -0.1,
@@ -100,7 +101,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/1 этаж/коридор1.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -145,7 +146,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/1 этаж/коридор2.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -3.8,
@@ -200,7 +201,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/1 этаж/Буфет.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/Буфет.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
@@ -221,7 +222,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/2 этаж/коридор1.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -9.8,
@@ -263,7 +264,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/2 этаж/коридор2.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -15.8,
@@ -335,7 +336,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 147,
         "type": "equirectangular",
-        "panorama": "./Полянки/2 этаж/210.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/210.jpg",
         "hotSpots": [
             {
                 "pitch": -4.8,
@@ -353,7 +354,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/2 этаж/205.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/205.jpg",
         "hotSpots": [
             {
                 "pitch": -8.8,
@@ -371,7 +372,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/2 этаж/учебный отдел.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/учебный отдел.jpg",
         "hotSpots": [
             {
                 "pitch": -14.8,
@@ -393,7 +394,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/3 этаж/коридор1.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -18.8,
@@ -445,7 +446,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/3 этаж/библиотека 1.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/библиотека 1.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -470,7 +471,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/3 этаж/библиотека 2.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/библиотека 2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -488,7 +489,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/3 этаж/коридор3.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/коридор3.jpg",
         "hotSpots": [
             {
                 "pitch": -13.8,
@@ -540,7 +541,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/3 этаж/коридор2.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -565,7 +566,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/3 этаж/301.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/301.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -586,7 +587,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/коридор.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор.jpg",
         "hotSpots": [
             {
                 "pitch": -13.8,
@@ -643,7 +644,7 @@ pannellum.viewer('panorama', {
         "pitch": -7,
         "yaw": 1,
         "type": "equirectangular",
-        "panorama": "./Полянки/4%20%D1%8D%D1%82%D0%B0%D0%B6/419.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4%20%D1%8D%D1%82%D0%B0%D0%B6/419.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -661,7 +662,7 @@ pannellum.viewer('panorama', {
         "pitch": -7,
         "yaw": 1,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/коридор3.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор3.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -694,21 +695,21 @@ pannellum.viewer('panorama', {
     "sportzal": {
         "title": "Спортивный зал",
         "hfov": 110,
-        "pitch": -17,
-        "yaw": 157,
+        "pitch": -11,
+        "yaw": 163,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/спортзал.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/спортзал.jpg",
         "hotSpots": [
             {
-                "pitch": 2.8,
-                "yaw": 107.9,
+                "pitch": -2.8,
+                "yaw": 163.9,
                 "type": "scene",
                 "text": "Коридор 4 этажа",
                 "sceneId": "4coridor3"
             },
             {
-                "pitch": -5.8,
-                "yaw": 329.9,
+                "pitch": -2.8,
+                "yaw": 384.9,
                 "type": "scene",
                 "text": "Коридор 4 этажа",
                 "sceneId": "4coridor2"
@@ -722,7 +723,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/423.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/423.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -740,7 +741,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/Актовый зал 1.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/Актовый зал 1.jpg",
         "hotSpots": [
             {
                 "pitch": 1.8,
@@ -765,7 +766,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/Актовый зал 2.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/Актовый зал 2.jpg",
         "hotSpots": [
             {
                 "pitch": 1,
@@ -790,7 +791,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/коридор2.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -822,7 +823,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/коридор4.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор4.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -840,7 +841,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/коридор5.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор5.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -893,7 +894,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "./Полянки/4 этаж/405.jpg",
+        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/405.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -906,6 +907,16 @@ pannellum.viewer('panorama', {
     },
 }
 });
+
+
+
+
+// {
+    //                 "pitch": 1.8,
+    //                 "yaw": 122.9,
+    //                 "type": "info",
+    //                 "text": "Какая то информация, если навести"
+    //             }
 </script>
 
 
