--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 #panorama {
     width: auto;
-    height: 600px;
+    
 }
 #panorama1 {
     width: auto;
@@ -26,7 +26,6 @@ padding: 0;
 </style>
 </head>
 <body>
-
 <div id="panorama"></div>
 <script>
 pannellum.viewer('panorama', {   
@@ -45,7 +44,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 5,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/вход.jpg",
+        "panorama": "./Полянки/1 этаж/вход.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
@@ -63,7 +62,7 @@ pannellum.viewer('panorama', {
         "hfov": 110,
         "yaw": 5,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/холл.jpg",
+        "panorama": "./Полянки/1 этаж/холл.jpg",
         "hotSpots": [
             {
                 "pitch": -0.1,
@@ -101,7 +100,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/коридор1.jpg",
+        "panorama": "./Полянки/1 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -146,7 +145,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/коридор2.jpg",
+        "panorama": "./Полянки/1 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -3.8,
@@ -201,7 +200,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/1 этаж/Буфет.jpg",
+        "panorama": "./Полянки/1 этаж/Буфет.jpg",
         "hotSpots": [
             {
                 "pitch": 2.8,
@@ -222,7 +221,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/коридор1.jpg",
+        "panorama": "./Полянки/2 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -9.8,
@@ -264,7 +263,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/коридор2.jpg",
+        "panorama": "./Полянки/2 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -15.8,
@@ -336,7 +335,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 147,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/210.jpg",
+        "panorama": "./Полянки/2 этаж/210.jpg",
         "hotSpots": [
             {
                 "pitch": -4.8,
@@ -354,7 +353,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/205.jpg",
+        "panorama": "./Полянки/2 этаж/205.jpg",
         "hotSpots": [
             {
                 "pitch": -8.8,
@@ -372,7 +371,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/2 этаж/учебный отдел.jpg",
+        "panorama": "./Полянки/2 этаж/учебный отдел.jpg",
         "hotSpots": [
             {
                 "pitch": -14.8,
@@ -394,7 +393,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/коридор1.jpg",
+        "panorama": "./Полянки/3 этаж/коридор1.jpg",
         "hotSpots": [
             {
                 "pitch": -18.8,
@@ -446,7 +445,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/библиотека 1.jpg",
+        "panorama": "./Полянки/3 этаж/библиотека 1.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -471,7 +470,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/библиотека 2.jpg",
+        "panorama": "./Полянки/3 этаж/библиотека 2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -489,7 +488,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/коридор3.jpg",
+        "panorama": "./Полянки/3 этаж/коридор3.jpg",
         "hotSpots": [
             {
                 "pitch": -13.8,
@@ -541,7 +540,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/коридор2.jpg",
+        "panorama": "./Полянки/3 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -566,7 +565,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/3 этаж/301.jpg",
+        "panorama": "./Полянки/3 этаж/301.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -587,7 +586,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор.jpg",
+        "panorama": "./Полянки/4 этаж/коридор.jpg",
         "hotSpots": [
             {
                 "pitch": -13.8,
@@ -644,7 +643,7 @@ pannellum.viewer('panorama', {
         "pitch": -7,
         "yaw": 1,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4%20%D1%8D%D1%82%D0%B0%D0%B6/419.jpg",
+        "panorama": "./Полянки/4%20%D1%8D%D1%82%D0%B0%D0%B6/419.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -662,7 +661,7 @@ pannellum.viewer('panorama', {
         "pitch": -7,
         "yaw": 1,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор3.jpg",
+        "panorama": "./Полянки/4 этаж/коридор3.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -695,12 +694,12 @@ pannellum.viewer('panorama', {
     "sportzal": {
         "title": "Спортивный зал",
         "hfov": 110,
-        "pitch": -11,
-        "yaw": 163,
+        "pitch": -17,
+        "yaw": 157,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/спортзал.jpg",
+        "panorama": "./Полянки/4 этаж/спортзал.jpg",
         "hotSpots": [
-            {
+        {
                 "pitch": -2.8,
                 "yaw": 163.9,
                 "type": "scene",
@@ -723,7 +722,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/423.jpg",
+        "panorama": "./Полянки/4 этаж/423.jpg",
         "hotSpots": [
             {
                 "pitch": -5.8,
@@ -741,7 +740,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/Актовый зал 1.jpg",
+        "panorama": "./Полянки/4 этаж/Актовый зал 1.jpg",
         "hotSpots": [
             {
                 "pitch": 1.8,
@@ -766,7 +765,7 @@ pannellum.viewer('panorama', {
         "pitch": -3,
         "yaw": 117,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/Актовый зал 2.jpg",
+        "panorama": "./Полянки/4 этаж/Актовый зал 2.jpg",
         "hotSpots": [
             {
                 "pitch": 1,
@@ -791,7 +790,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор2.jpg",
+        "panorama": "./Полянки/4 этаж/коридор2.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -823,7 +822,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор4.jpg",
+        "panorama": "./Полянки/4 этаж/коридор4.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -841,7 +840,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/коридор5.jpg",
+        "panorama": "./Полянки/4 этаж/коридор5.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -894,7 +893,7 @@ pannellum.viewer('panorama', {
         "pitch": -13,
         "yaw": 77,
         "type": "equirectangular",
-        "panorama": "http://www.fa.ru/fil/yaroslavl/about/VirtualTour/PublishingImages/VirtualTourImages/4 этаж/405.jpg",
+        "panorama": "./Полянки/4 этаж/405.jpg",
         "hotSpots": [
             {
                 "pitch": -1.8,
@@ -907,16 +906,6 @@ pannellum.viewer('panorama', {
     },
 }
 });
-
-
-
-
-// {
-    //                 "pitch": 1.8,
-    //                 "yaw": 122.9,
-    //                 "type": "info",
-    //                 "text": "Какая то информация, если навести"
-    //             }
 </script>
 
 
