--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ padding: 0;
 <script>
 pannellum.viewer('panorama', {   
 "default": {
-    "firstScene": "vhod",
+    "firstScene": "4coridor5",
     "sceneFadeDuration": 1000
 },
 "autoLoad": true,
