--- a/index.html
+++ b/index.html
@@ -884,6 +884,31 @@ pannellum.viewer('panorama', {
                 "text": "Компьютерный класс",
                 "sceneId": "405"
             },
+            {
+                "pitch": -1.8,
+                "yaw": 145.4,
+                "type": "scene",
+                "text": "Мобильный класс",
+                "sceneId": "405"
+            },
+        ]
+    },
+
+    "409": {
+        "title": "Мобильный класс",
+        "hfov": 110,
+        "pitch": -13,
+        "yaw": 77,
+        "type": "equirectangular",
+        "panorama": "./Полянки/4 этаж/405.jpg",
+        "hotSpots": [
+            {
+                "pitch": -1.8,
+                "yaw": 467.9,
+                "type": "scene",
+                "text": "Коридор 4 этажа",
+                "sceneId": "4coridor5"
+            },
         ]
     },
 
