--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ pannellum.viewer('panorama', {
                 "text": "Холл 1 этажа",
                 "sceneId": "hall"
             },
+            
             {
                 "pitch": -8.1,
                 "yaw": 178,
@@ -190,10 +191,56 @@ pannellum.viewer('panorama', {
                 "targetYaw": -23,
                 "targetPitch": 2
             },
-
+ {
+                "pitch": 2.8,
+                "yaw":200.9,
+                "type": "scene",
+                "text": "Кабинет 111",
+                "sceneId": "111"
+            },
+             {
+                "pitch": -3.8,
+                "yaw":87.9,
+                "type": "scene",
+                "text": "Кабинет 113",
+                "sceneId": "113"
+            },
         ]
     },
-
+    "111": {
+    "title": "Кабинет 111",
+    "hfov": 110,
+    "pitch": -3,
+    "yaw": 117,
+    "type": "equirectangular",
+    "panorama": "./Полянки/1 этаж/111.jpg",
+    "hotSpots": [
+        {
+            "pitch": -1.8,
+            "yaw": 275,
+            "type": "scene",
+            "text": "Коридор 1 этажа",
+            "sceneId": "coridor2"
+        }
+    ]
+},
+    "113": {
+    "title": "Кабинет 113",
+    "hfov": 110,
+    "pitch": -3,
+    "yaw": 117,
+    "type": "equirectangular",
+    "panorama": "./Полянки/1 этаж/113.jpg",
+    "hotSpots": [
+        {
+            "pitch": -1.8,
+            "yaw": 45,
+            "type": "scene",
+            "text": "Коридор 1 этажа",
+            "sceneId": "coridor2"
+        }
+    ]
+},
     "bufet": {
         "title": "Буфет",
         "hfov": 110,
