--- a/index.html
+++ b/index.html
@@ -928,6 +928,13 @@ pannellum.viewer('panorama', {
                 "type": "scene",
                 "text": "Коридор 4 этажа",
                 "sceneId": "4coridor5"
+            },
+            {
+                "pitch": 0.8,
+                "yaw": 120.4,
+                "type": "scene",
+                "text": "Компьютерный класс",
+                "sceneId": "403"
             }
         ]
     },
@@ -1009,7 +1016,23 @@ pannellum.viewer('panorama', {
             },
         ]
     },
-
+    "403": {
+        "title": "Компьютерный класс",
+        "hfov": 110,
+        "pitch": -13,
+        "yaw": 77,
+        "type": "equirectangular",
+        "panorama": "./Полянки/4 этаж/403.jpg",
+        "hotSpots": [
+            {
+                "pitch": -1.8,
+                "yaw": 505.9,
+                "type": "scene",
+                "text": "Коворкинг зона",
+                "sceneId": "4coridor4"
+            },
+        ]
+    },
     "405": {
         "title": "Компьютерный класс",
         "hfov": 110,
@@ -1020,7 +1043,7 @@ pannellum.viewer('panorama', {
         "hotSpots": [
             {
                 "pitch": -6.8,
-                "yaw": 455.9,
+                "yaw": 515.9,
                 "type": "scene",
                 "text": "Коридор 4 этажа",
                 "sceneId": "4coridor5"
